--- a/env.local.example
+++ b/env.local.example
@@ -5,6 +5,10 @@
 
 export HOSTNAME_FQDN="hostname.domainname" # Fully qualified domain name of this installation
 
+# Only applicable on initial setup, changing these settings
+# after database is created and seeded won't yield any change.
+export INITIAL_ROOT_PASSWORD="rootpasswd"
+
 
 #############################################################################
 # Optional vars
