--- a/env.local.example
+++ b/env.local.example
@@ -41,3 +41,6 @@ export INITIAL_ROOT_PASSWORD="rootpasswd"
 # Format: space separated list of dirs
 #
 #export EXTRA_CONF_DIRS="/path/to/dir1 ./path/to/dir2 dir3 dir4"
+
+# SMTP server without SSL (on port 25)
+#export SMTP_SERVER="smtp.server"
