--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,14 @@ services:
       # https://gitlab.com/gitlab-org/omnibus-gitlab/blob/master/files/gitlab-config-template/gitlab.rb.template
       GITLAB_OMNIBUS_CONFIG: |
         external_url 'http://${HOSTNAME_FQDN}'
+
+        # https://docs.gitlab.com/12.10/ee/administration/pages/index.html#wildcard-domains
+        pages_external_url 'http://${HOSTNAME_FQDN}'
+        pages_nginx['redirect_http_to_https'] = false
+        gitlab_pages['inplace_chroot'] = true
+        gitlab_pages['http_proxy'] = 'http://${HOSTNAME_FQDN}:8080'
+        gitlab_pages['listen_proxy'] = "${HOSTNAME_FQDN}:10080"
+
         # rather not take over the really ssh port 22 of the host
         # still need for ssh connection to the host for administration
         gitlab_rails['gitlab_shell_ssh_port'] = 2224
@@ -28,6 +36,8 @@ services:
 
     ports:
       - '80:80'
+      - '8080:8080'
+      - '10080:10080'
       - '443:443'
       - '2224:22'
     volumes:
