runner: first working version, still WIP, need manual registration step
Need this matching manual registration step (change url and
registration-token to match server):

```
docker run --rm -v /srv/gitlab-runner/config:/etc/gitlab-runner gitlab/gitlab-runner register \
  --non-interactive \
  --executor "docker" \
  --docker-image alpine:latest \
  --url "http://lvu8.ouranos.ca/" \
  --registration-token "yTHNgXW9hDKfyMesz5UH" \
  --description "docker-runner" \
  --tag-list "docker,runner1" \
  --run-untagged="true" \
  --locked="false" \
  --access-level="not_protected"
```

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,13 @@ services:
       - 'gitlab_logs_persistence:/var/log/gitlab'
       - 'gitlab_data_persistence:/var/opt/gitlab'
 
+  runner:
+    image: 'gitlab/gitlab-runner'
+    restart: always
+    volumes:
+      - '/srv/gitlab-runner/config:/etc/gitlab-runner:rw'
+      - '/var/run/docker.sock:/var/run/docker.sock:ro'
+
 volumes:
   gitlab_data_persistence:
     external:
