--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,10 +42,10 @@ services:
       - 'gitlab_data_persistence:/var/opt/gitlab'
 
   runner:
-    image: 'gitlab/gitlab-runner'
+    image: 'gitlab/gitlab-runner:v14.7.0'
     restart: always
     volumes:
-      - '/srv/gitlab-runner/config:/etc/gitlab-runner:rw'
+      - './config/runner/config.toml:/etc/gitlab-runner/config.toml:ro'
       - '/var/run/docker.sock:/var/run/docker.sock:ro'
 
 volumes:
