--- a/env.local.example
+++ b/env.local.example
@@ -9,6 +9,12 @@ export HOSTNAME_FQDN="hostname.domainname" # Fully qualified domain name of this
 # after database is created and seeded won't yield any change.
 export INITIAL_ROOT_PASSWORD="rootpasswd"
 
+# For runner to connect to.
+export GITLAB_WEB_URL="http://${HOSTNAME_FQDN}"
+
+# For runner to connect to.
+export GITLAB_TOKEN="TOKEN"
+
 
 #############################################################################
 # Optional vars
