compose: manual set container_name so name stop vary between deployments
Old name:

<checkout_name>_runner_1
<checkout_name>_web_1

So if checkout_name is different between deployments, container names
are different and it's harder for script to use the container name
across deployments.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '2'
 services:
   web:
     image: 'gitlab/gitlab-ce:12.5.4-ce.0'
+    container_name: gitlab-web
     restart: always
     hostname: "${HOSTNAME_FQDN}"
     environment:
@@ -43,6 +44,7 @@ services:
 
   runner:
     image: 'gitlab/gitlab-runner:v14.7.0'
+    container_name: gitlab-runner
     restart: always
     volumes:
       - './config/runner/config.toml:/etc/gitlab-runner/config.toml:ro'
