--- a/env.local.example
+++ b/env.local.example
@@ -13,6 +13,7 @@ export INITIAL_ROOT_PASSWORD="rootpasswd"
 export GITLAB_WEB_URL="http://${HOSTNAME_FQDN}"
 
 # For runner to connect to.
+# Token can be found at ${GITLAB_WEB_URL}/admin/runners
 export GITLAB_TOKEN="TOKEN"
 
 
