runner: add script and document how to register runner

--- a/env.local.example
+++ b/env.local.example
@@ -14,6 +14,9 @@ export GITLAB_WEB_URL="http://${HOSTNAME_FQDN}"
 
 # For runner to connect to.
 # Token can be found at ${GITLAB_WEB_URL}/admin/runners
+#
+# On first startup this field can be left with bogus value since this is needed
+# for register-runner only which is run only after first start-up.
 export GITLAB_TOKEN="TOKEN"
 
 
