--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 # https://docs.gitlab.com/omnibus/docker/README.html#install-gitlab-using-docker-compose
 services:
-  web:
+  gitlab-web:
     image: 'gitlab/gitlab-ce:12.5.4-ce.0'
     container_name: gitlab-web
     restart: always
@@ -42,7 +42,7 @@ services:
       - 'gitlab_logs_persistence:/var/log/gitlab'
       - 'gitlab_data_persistence:/var/opt/gitlab'
 
-  runner:
+  gitlab-runner:
     image: 'gitlab/gitlab-runner:v14.7.0'
     container_name: gitlab-runner
     restart: always
