--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,7 +47,7 @@ services:
     container_name: gitlab-runner
     restart: always
     volumes:
-      - './config/runner/config.toml:/etc/gitlab-runner/config.toml:ro'
+      - './config/runner/config.toml:/etc/gitlab-runner/config.toml:rw'
       - '/var/run/docker.sock:/var/run/docker.sock:ro'
 
 volumes:
