docs: clarify login to use to get GITLAB_TOKEN

--- a/env.local.example
+++ b/env.local.example
@@ -13,7 +13,7 @@ export INITIAL_ROOT_PASSWORD="rootpasswd"
 export GITLAB_WEB_URL="http://${HOSTNAME_FQDN}"
 
 # For runner to connect to.
-# Token can be found at ${GITLAB_WEB_URL}/admin/runners
+# Token can be found at ${GITLAB_WEB_URL}/admin/runners, login using root account.
 #
 # On first startup this field can be left with bogus value since this is needed
 # for register-runner only which is run only after first start-up.
