--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
         external_url 'http://${HOSTNAME_FQDN}'
 
         # https://docs.gitlab.com/12.10/ee/administration/pages/index.html#wildcard-domains
+        # pages will be available at http://<USER or GROUP>.${HOSTNAME_FQDN}/<REPO>
         pages_external_url 'http://${HOSTNAME_FQDN}'
         pages_nginx['redirect_http_to_https'] = false
         gitlab_pages['inplace_chroot'] = true
