ssl: activate for gitlab web but not pages since need wildcard ssl cert

--- a/env.local.example
+++ b/env.local.example
@@ -3,6 +3,8 @@
 # Can add new vars but do not remove, else automated deployment will break
 #############################################################################
 
+export SSL_CERTIFICATE="/path/to/ssl/cert.crt"  # *absolute* path, .pem works too
+export SSL_CERTIFICATE_KEY="/path/to/ssl/cert.key"  # *absolute* path
 export HOSTNAME_FQDN="hostname.domainname" # Fully qualified domain name of this installation
 
 # Only applicable on initial setup, changing these settings
@@ -10,7 +12,7 @@ export HOSTNAME_FQDN="hostname.domainname" # Fully qualified domain name of this
 export INITIAL_ROOT_PASSWORD="rootpasswd"
 
 # For runner to connect to.
-export GITLAB_WEB_URL="http://${HOSTNAME_FQDN}"
+export GITLAB_WEB_URL="https://${HOSTNAME_FQDN}"
 
 # For runner to connect to.
 # Token can be found at ${GITLAB_WEB_URL}/admin/runners, login using root account.
