docs: runner registration do not work with self-signed ssl cert

--- a/env.local.example
+++ b/env.local.example
@@ -12,6 +12,7 @@ export HOSTNAME_FQDN="hostname.domainname" # Fully qualified domain name of this
 export INITIAL_ROOT_PASSWORD="rootpasswd"
 
 # For runner to connect to.
+# Note: runner is unable to register if GITLAB_WEB_URL uses self-signed ssl certificate.
 export GITLAB_WEB_URL="https://${HOSTNAME_FQDN}"
 
 # For runner to connect to.
