--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,17 @@
-version: '2'
+x-logging:
+  &default-logging
+  driver: "json-file"
+  options:
+    max-size: "50m"
+    max-file: "10"
+
 # https://docs.gitlab.com/omnibus/docker/README.html#install-gitlab-using-docker-compose
 services:
   gitlab-web:
     image: 'gitlab/gitlab-ce:12.5.4-ce.0'
     container_name: gitlab-web
     restart: always
+    logging: *default-logging
     hostname: "${HOSTNAME_FQDN}"
     environment:
       # https://gitlab.com/gitlab-org/omnibus-gitlab/blob/master/files/gitlab-config-template/gitlab.rb.template
@@ -54,6 +61,7 @@ services:
     image: 'gitlab/gitlab-runner:v14.7.0'
     container_name: gitlab-runner
     restart: always
+    logging: *default-logging
     volumes:
       - './config/runner/config.toml:/etc/gitlab-runner/config.toml:rw'
       - '/var/run/docker.sock:/var/run/docker.sock:ro'
