--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,9 @@
+x-logging: &default-logging
+  driver: "json-file"
+  options:
+    max-size: "50m"
+    max-file: "10"
+
 # https://docs.gitlab.com/omnibus/docker/README.html#install-gitlab-using-docker-compose
 services:
   gitlab-web:
@@ -5,10 +11,7 @@ services:
     container_name: gitlab-web
     restart: always
     logging:
-      driver: "json-file"
-      options:
-        max-size: "50m"
-        max-file: "10"
+      <<: *default-logging
     hostname: "${HOSTNAME_FQDN}"
     environment:
       # https://gitlab.com/gitlab-org/omnibus-gitlab/blob/master/files/gitlab-config-template/gitlab.rb.template
@@ -59,10 +62,7 @@ services:
     container_name: gitlab-runner
     restart: always
     logging:
-      driver: "json-file"
-      options:
-        max-size: "50m"
-        max-file: "10"
+      <<: *default-logging
     volumes:
       - './config/runner/config.toml:/etc/gitlab-runner/config.toml:rw'
       - '/var/run/docker.sock:/var/run/docker.sock:ro'
