env.local.example: more realistic ssl cert path sample

--- a/env.local.example
+++ b/env.local.example
@@ -3,9 +3,9 @@
 # Can add new vars but do not remove, else automated deployment will break
 #############################################################################
 
-export SSL_CERTIFICATE="/path/to/ssl/cert.crt"  # *absolute* path, .pem works too
-export SSL_CERTIFICATE_KEY="/path/to/ssl/cert.key"  # *absolute* path
 export HOSTNAME_FQDN="hostname.domainname" # Fully qualified domain name of this installation
+export SSL_CERTIFICATE="/etc/ssl/$HOSTNAME_FQDN/fullchain.crt"  # *absolute* path, .pem works too
+export SSL_CERTIFICATE_KEY="/etc/ssl/$HOSTNAME_FQDN/privkey.crt"  # *absolute* path
 
 # Only applicable on initial setup, changing these settings
 # after database is created and seeded won't yield any change.
